<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="accept_delete">Ihr habt {0} aufgelöst.</string>
    <string name="accept_depot">Ihr habt {0} in {1} gelagert.</string>
    <string name="accept_increase">{0} wurde auf {1} erhöht.</string>
    <string name="accept_take">Ihr habt {0} von {1} genommen.</string>
    <string name="accept_use">Ihr dürft Aktion {0} mit {1} Würfel(n){2?, {2} zusätzlichen Erfolg(en)|}{x? und zusätzlichen Würfel(n) {x}|} versuchen. Schwierigkeit {3}.</string>
    <string name="actions">Aktionen</string>
    <string name="activate_bluetooth">Activate bluetooth.</string>
    <string name="add">Hinzufügen</string>
    <string name="add_depot">Depot hinzufügen</string>
    <string name="add_health_step">Lebensstufe hinzufügen</string>
    <string name="add_insanity">Geistesstörung hinzufügen</string>
    <string name="add_insanity_message">Geben Sie den Namen einer Geistesstörung ein:</string>
    <string name="add_item">Item hinzufügen</string>
    <string name="add_restriction">Restriktion hinzufügen</string>
    <string name="added_item">Folgendes Item wurde hinzugefügt: {0}</string>
    <string name="additional_damage">Zusätzlicher Schaden</string>
    <string name="additional_info">Zusatzinformationen</string>
    <string name="afk">(AFK)</string>
    <string name="ammo">Munition</string>
    <string name="amount">Menge</string>
    <string name="app_name">VampireApp</string>
    <string name="apply">Annehmen</string>
    <string name="armor">Rüstung</string>
    <string name="ask_delete_depot">Will {0} auflösen.</string>
	<string name="ask_depot_money">Will {0} in {1} lagern.</string>
	<string name="ask_increase">Will {0} auf {1} erhöhen.</string>
	<string name="ask_take_money">Will {0} von {1} nehmen.</string>
    <string name="available">Verfügbar</string>
    <string name="back">Zurück</string>
    <string name="bag">Tasche</string>
    <string name="ban">Bannen</string>
    <string name="banned">Sie wurden vom Host gebannt.</string>
    <string name="basic_info">Basisinformationen</string>
    <string name="behavior_colon">Verhalten:</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="button_create_character">Neuen Charakter erstellen</string>
    <string name="button_create_character_free">Charakter frei erstellen</string>
    <string name="cancel">Abbrechen</string>
    <string name="char_name">Charakter Name</string>
    <string name="characters">Charaktere</string>
    <string name="choose_difficulty">Wähle Schwierigkeit für die Aktion {0}</string>
    <string name="choose_host">Host auswählen</string>
	<string name="choose_item_type">Item Typ auswählen</string>
    <string name="choose_dices_amount">Würfelmenge wählen</string>
    <string name="choose_money_amount">Geldmenge wählen</string>
    <string name="clan_colon">Clan:</string>
    <string name="concept">Konzept</string>
    <string name="concept_colon">Konzept:</string>
    <string name="connect">Verbinden</string>
    <string name="connection">Verbindung</string>
    <string name="connection_service">Connection service</string>
    <string name="content_description">Placeholder</string>
	<string name="create_armor">Neue Rüstung erstellen</string>
    <string name="create_char">Charaktererstellung</string>
    <string name="create_depot">Bitte geben Sie den Namen des neuen Depots ein:</string>
    <string name="create_depot_title">Depot erstellen</string>
    <string name="create_host">Host erstellen</string>
    <string name="create_host_button">Neuen Host erstellen</string>
    <string name="create_insanity">Neue Geistesstörung erstellen</string>
    <string name="create_item">Neues Item erstellen</string>
    <string name="create_restriction">Neue Restriktion erstellen</string>
    <string name="create_weapon">Neue Waffe erstellen</string>
    <string name="damage">Schaden</string>
    <string name="day">Tag</string>
    <string name="delete_char">Löschen</string>
    <string name="delete_chars">Alle löschen</string>
    <string name="delete_host">Löschen</string>
    <string name="deny_increase">Ihr dürft {0} nicht erhöhen.</string>
    <string name="deny_take_depot">Ihr habt keinen Zugriff auf {0}.</string>
    <string name="deny_use">Ihr dürft {0} nicht nutzen.</string>
    <string name="description">Beschreibung</string>
    <string name="difficulty">Schwierigkeit</string>
    <string name="disconnect">Trennen</string>
    <string name="distance">Reichweite</string>
    <string name="distance_weapon">Distanzwaffe</string>
    <string name="distance_unit">m</string>
    <string name="edit_item">Bearbeiten von </string>
    <string name="ep_colon">Erfahrung:</string>
    <string name="ep_amount">EP Menge</string>
    <string name="exit">Beenden</string>
    <string name="finish">Fertigstellen</string>
    <string name="forever">Dauerhaft</string>
    <string name="free_points_info">Freie Zusatzpunkte</string>
    <string name="friends">Freunde</string>
    <string name="generation_colon">Generation:</string>
    <string name="got_insanity">Sie besitzen jetzt folgende Geistesstörung: {0}</string>
    <string name="got_item">Sie haben folgenden Gegenstand erhalten: {x}</string>
    <string name="got_step">Sie haben eine Lebensstufe erhalten.</string>
    <string name="health_colon">Leben:</string>
    <string name="host_closed">Der Host hat sein Spiel beendet.</string>
    <string name="host_decreased">{0} wurde auf {1} verringert.</string>
    <string name="host_increased">{0} wurde auf {1} erhöht.</string>
    <string name="host_name">Host Name</string>
    <string name="hosts">Hosts</string>
    <string name="hour">Stunde</string>
    <string name="index">Index</string>
    <string name="item_child_ep_cost_multi">Item Child EP Kosten Multiplikator</string>
    <string name="item_child_ep_cost_new">Neue Item Child EP Kosten</string>
    <string name="item_ep_cost">Item EP Kosten</string>
    <string name="item_ep_cost_multi">Item EP Kosten Multiplikator</string>
    <string name="item_ep_cost_new">Neue Item EP Kosten</string>
    <string name="item_name">Item Name</string>
    <string name="item_provider">Item provider</string>
    <string name="item_value">Item Wert</string>
    <string name="item_weight">Item Gewicht</string>
    <string name="insanities">Geistesstörungen</string>
    <string name="insanity_name">Name der Geistesstörung</string>
    <string name="inventory">Inventar</string>
    <string name="items">Items</string>
    <string name="kick">Rauswerfen</string>
    <string name="kicked">Der Host hat dich rausgeworfen.</string>
    <string name="ko">Außer Gefecht</string>
    <string name="left_game">hat das Spiel verlassen.</string>
    <string name="left_item">Hat folgenden Gegenstand liegen lassen: {x}</string>
    <string name="lost_insanity">Sie sind die folgende Geistesstörung losgeworden: {0}</string>
    <string name="magazine">Magazin</string>
    <string name="max">Max</string>
    <string name="max_weight">Maximales Gewicht</string>
    <string name="maximum">Maximum</string>
    <string name="minimum">Minimum</string>
    <string name="mode_colon">Zustand:</string>
    <string name="money">Geld</string>
    <string name="money_sent">Sie haben {0} erhalten.</string>
    <string name="name_in_use">Der gewählte Charakter Name ist bereits an einen anderen Spieler vergeben.</string>
    <string name="nature_colon">Wesen:</string>
    <string name="network">Internet</string>
    <string name="next">Weiter</string>
    <string name="no">Nein</string>
    <string name="no_banned_players">Sie haben derzeit keine Spieler gebannt.</string>
    <string name="no_paired_device">Sie haben keine gekoppelten Geräte.</string>
    <string name="normal">Normal</string>
    <string name="ok">OK</string>
    <string name="pending">Ausstehend ...</string>
    <string name="play">Spielen</string>
    <string name="play_host">Starten</string>
    <string name="play_host_button">Host starten</string>
    <string name="play_lobby">Lobby</string>
    <string name="player_lost_insanity">Ist folgende Geistesstörung los: {0}</string>
    <string name="quantity">Anzahl</string>
    <string name="rage">Rasend</string>
    <string name="refused">Verweigert</string>
    <string name="reload_time">Nachladezeit</string>
    <string name="removed_item">Folgendes Item wurde entfernt: {0}</string>
    <string name="reset">Zurücksetzen</string>
    <string name="restrictions">Restriktionen</string>
    <string name="round">Runde</string>
    <string name="searching">Suchend ...</string>
    <string name="sleeping">Schlafend</string>
    <string name="stash">Versteck</string>
    <string name="to_much_weight">Der Gegenstand wiegt zu viel.</string>
    <string name="took_item">Folgendes Item wurde genommen: {x}</string>
    <string name="unban">Entbannen</string>
    <string name="use">Nutzen</string>
    <string name="use_action">Versuche Aktion {0} mit {1} Würfel(n){2?, {2} zusätzlichen Erfolg(en)|}{x? und zusätzlichen Würfel(n) {x}|}.</string>
    <string name="uses_action">Will Aktion {0} mit {1} Würfel(n){2?, {2} zusätzlichen Erfolg(en)|}{x? und zusätzlichen Würfel(n) {x}|} versuchen.</string>
    <string name="used_action">Hat Aktion {0} genutzt. Würfe:{1}{2?, Erfolge: {2}|}{3?, Besondere Erfolge: {3}|}{4?, Patzer: {4}|}</string>
    <string name="used_action_none">Hat Aktion {0} genutzt. Würfe: Keine{1}{2?, Erfolge: {2}|}{3?, Besondere Erfolge: {3}|}{4?, Patzer: {4}|}</string>
    <string name="using_action">Sie haben {0} genutzt. Würfe:{1}{2?, Erfolge: {2}|}{3?, Besondere Erfolge: {3}|}{4?, Patzer: {4}|}</string>
    <string name="using_action_none">Sie haben {0} genutzt. Würfe: Keine{1}{2?, Erfolge: {2}|}{3?, Besondere Erfolge: {3}|}{4?, Patzer: {4}|}</string>
    <string name="value">Wert</string>
    <string name="weight">Gewicht</string>
    <string name="weight_unit">kg</string>
    <string name="wifi">WLAN</string>
    <string name="yes">Ja</string>

</resources>