<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/dialog_weapon_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_weapon_weight_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_weight"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weight_unit"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_weapon_damage_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/damage"
        android:inputType="numberSigned" />

    <CheckBox
        android:id="@+id/dialog_weapon_additional_damage_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/additional_damage" />
    
    <Spinner
        android:id="@+id/dialog_weapon_additional_damage_spinner"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dialog_weapon_difficulty_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/difficulty"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/dialog_weapon_stash_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stash"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/dialog_weapon_distance_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/distance_weapon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_weapon_distance_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/distance"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/distance_unit" 
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_weapon_reload_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reload_time"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/dialog_weapon_magazine_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/magazine"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/dialog_weapon_ammo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ammo"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_weapon_quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/dialog_weapon_ok_button"
        style="@style/BarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/ok" />

</LinearLayout>