<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/dialog_armor_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_armor_weight_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_weight"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weight_unit"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_armor_quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="numberSigned" />
    
    <EditText
        android:id="@+id/dialog_armor_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/armor"
        android:inputType="numberSigned" />
    
    <Button
        android:id="@+id/dialog_armor_ok_button"
        style="@style/BarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/ok" />
    
</LinearLayout>