<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/dialog_restriction_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/dialog_restriction_item_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_restriction_minimum_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/minimum"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/dialog_restriction_maximum_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/maximum"
            android:inputType="numberSigned" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_restriction_index_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/index"
        android:inputType="number" />

    <EditText
        android:id="@+id/dialog_restriction_value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value"
        android:inputType="numberSigned" />
    
    <CheckBox
        android:id="@+id/dialog_restriction_forever_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/forever" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_restriction_duration_value_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/quantity"
            android:inputType="numberSigned" />

        <Spinner
            android:id="@+id/dialog_restriction_duration_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_restriction_ok_button"
        style="@style/BarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/ok" />

</LinearLayout>