<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/dialog_insanity_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insanity_name"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/dialog_insanity_forever_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/forever" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_insanity_value_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/quantity"
            android:inputType="number" />

        <Spinner
            android:id="@+id/dialog_insanity_duration_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_insanity_ok_button"
        style="@style/BarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/ok" />

</LinearLayout>