<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin" >

        <TextView
            android:id="@+id/cc_general_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/basic_info"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/cc_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/char_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cc_concept_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/concept"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/nature_colon"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/cc_behavior_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/behavior_colon"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/cc_nature_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/clan_colon"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/cc_clan_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cc_generation_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cc_controllers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            style="@style/List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cc_general_back_button"
                style="@style/BarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/cc_general_next_button"
                style="@style/BarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>