<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/ep_colon"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/h_ep_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="@dimen/small_text_size" />

    <ImageButton
        android:id="@+id/h_give_ep_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_ep" />

    <EditText
        android:id="@+id/h_ep_amount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ep_amount"
        android:inputType="number"
        android:maxLength="4"
        android:singleLine="true"
        android:textSize="@dimen/small_text_size" />

</LinearLayout>