<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin" >

            <TextView
                android:id="@+id/cc_free_points_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/free_points_info"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/cc_free_points_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ProgressBar
                android:id="@+id/cc_free_points_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cc_free_points_controllers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            style="@style/List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin" >

            <Button
                android:id="@+id/cc_free_points_back_button"
                style="@style/BarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

            <Button
                android:id="@+id/cc_reset_temp_points_button"
                style="@style/BarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />

            <Button
                android:id="@+id/cc_free_points_next_button"
                style="@style/BarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>